--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<title>Text Twist</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 </head>
-<body onload="load()">
+<body>
 	<content>
 		<h1>Text Twist</h1>
 		<textarea id="guesses" placeholder="Hellow world"></textarea>
