Correct permutation list, update styling, fix typo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<content>
 		<h1>Text Twist</h1>
-		<textarea id="guesses" placeholder="Hellow world"></textarea>
+		<input id="guesses" type="text" placeholder="Hello world" autofocus required></input>
 		<footer class="row">
 			<div class="col col-3"></div>
 			<div class="col col-1 border rounded-circle my-3">L</div>
