Add reset button to temporarily display the results behind the scene

--- a/index.html
+++ b/index.html
@@ -15,17 +15,10 @@
 <body>
 	<content>
 		<h1>Text Twist</h1>
-		<input id="guesses" type="text" placeholder="Hello world" autofocus required></input>
-		<footer class="row">
-			<div class="col col-3"></div>
-			<div class="col col-1 border rounded-circle my-3">L</div>
-			<div class="col col-1 border rounded-circle my-3">E</div>
-			<div class="col col-1 border rounded-circle my-3">T</div>
-			<div class="col col-1 border rounded-circle my-3">T</div>
-			<div class="col col-1 border rounded-circle my-3">E</div>
-			<div class="col col-1 border rounded-circle my-3">R</div>
-			<div class="col col-3"></div>
-		</footer>
+		<input id="guess" type="text" placeholder="Hello world" autofocus required></input>
+		<div id="words"></div>
+		<footer id="hint"></footer>
+		<button id="reset" type="button" class="btn btn-primary">Reset</button>
 	</content>
 </body>
 </html>
