Display accumulated list of correct guesses, implement win condition, update documentation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<content>
 		<h1>Text Twist</h1>
 		<form>
-			<input id="guess" type="text" placeholder="Enter guess here" autofocus required></input>
+			<input id="guess" type="text" autofocus required></input>
 			<br>
 			<button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button>
 			<button type="button" class="btn btn-success btn-lg" id="twist">Twist</button>
