--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body onload="init()">
+<body>
 	<content>
 		<h1>Text Twist</h1>
 		<form>
-			<input id="guess" type="text" autofocus required></input>
+			<input id="guess" type="text" placeholder="Enter text here" autofocus required></input>
 			<br>
 			<button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button>
 			<button type="button" class="btn btn-success btn-lg" id="twist">Twist</button>
