Revise logic and styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<content>
 		<h1>Text Twist</h1>
-		<form>
+		<form autocomplete="off">
 			<input id="guess" type="text" placeholder="Enter text here" autofocus required></input>
 			<br>
 			<button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button>
