Revise Hint modal to display How-to-Play

--- a/index.html
+++ b/index.html
@@ -41,16 +41,20 @@
 
 	  </div>
 	</div>
-	<!-- Modal for hint -->
+	<!-- Modal for How to Play -->
 	<div id="modalHint" class="modal fade" role="dialog">
-	  <div class="modal-dialog modal-sm">
+	  <div class="modal-dialog modal-md">
 	    <!-- Modal content-->
 	    <div class="modal-content">
-	      <div class="modal-header">
-	        <h2>Hint</h2>
+	      <div class="modal-header float-center">
+	        <h2>How to Play</h2>
 	      </div>
-	      <div class="modal-body">
-	        <h4>Here's a hint</h4>
+	      <div class="modal-body text-left">
+	        <ul>
+	        	<li>Using keyboard, enter your guesses and press enter.</li>
+	        	<li>Press <i>Twist</i> button to scramble the order of letters.</li>
+	        	<li>Press <i>Reset</i> button to start another game.</li>
+	        </ul>
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal" default>Close</button>
