Use shorter word list, and require at least 2 permutated words

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 	  </div>
 	</div>
 
-	<script src="words.json"></script>
+	<!-- <script src="words.json"></script> -->
+	<script src="words_reduced.json"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
