--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 	  </div>
 	</div>
 
-	<!-- <script src="words.json"></script> -->
-	<script src="words_reduced.json"></script>
+	<script src="words.json"></script>
+	<!-- <script src="words_reduced.json"></script> -->
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
