Hide blinking cursor inside the text entry box

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalHint">Hint</button>
 		</form>
 		<textarea id="words" class="text-justify d-inline" disabled></textarea>
-		<div id="hint"></div>
+		<div id="twisted"></div>
 	</content>
 	<!-- Modal for reset -->
 	<div id="modalReset" class="modal fade" role="dialog">
