--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<h1>Text Twist</h1>
 		<form autocomplete="off">
 			<input id="guess" type="text" placeholder="Enter text here" autofocus required></input>
-			<br>
+			<br><br>
 			<button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button>
 			<button type="button" class="btn btn-success btn-lg" id="twist">Twist</button>
 			<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#modalReset">Reset</button>
 			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalHint">Hint</button>
 		</form>
-		<textarea id="words" class="text-justify d-inline" disabled></textarea>
 		<div id="twisted"></div>
+		<textarea id="words" class="text-justify d-inline" disabled></textarea>
 	</content>
 	<!-- Modal for reset -->
 	<div id="modalReset" class="modal fade" role="dialog">
@@ -65,7 +65,7 @@
 	</div>
 
 	<script src="words.json"></script>
-	<!-- <script src="words_reduced.json"></script> -->
+	<script src="words_reduced.json"></script>
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
