Fix bug caused by selecting from 2 separate word sources

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</div>
 
 	<script src="words.json"></script>
-	<script src="words_reduced.json"></script>
+	<!-- <script src="words_reduced.json"></script> -->
 	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
