--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 		<form autocomplete="off">
 			<input id="guess" type="text" placeholder="Enter text here" autofocus required></input>
 			<div id="buttonRow">
-				<button type="submit" class="btn btn-primary btn-lg" id="submit" hidden>Submit</button>
+				<button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button>
 				<button type="button" class="btn btn-success btn-lg" id="twist">Twist</button>
 				<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#modalReset">Reset</button>
 				<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalInfo">How to Play</button>	
 			</div>			
 		</form>
 		<div id="twisted"></div>
-		<textarea id="words" class="text-justify d-inline" disabled></textarea>
+		<div id="words" class="text-justify d-inline"></div>
 	</content>
 	<!-- Modal for reset -->
 	<div id="modalReset" class="modal fade" role="dialog">
@@ -64,9 +64,9 @@
 
 	  </div>
 	</div>
-
 	<script src="words.json"></script>
 	<!-- <script src="words_reduced.json"></script> -->
 	<script type="text/javascript" src="app.js"></script>
+
 </body>
 </html>
