--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<form autocomplete="off">
 			<input id="guess" type="text" placeholder="Enter text here" autofocus required></input>
 			<div id="buttonRow">
-				<button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button>
-				<button type="button" class="btn btn-success btn-lg" id="twist">Twist</button>
-				<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#modalReset">Reset</button>
-				<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalInfo">How to Play</button>	
+				<button type="submit" class="btn btn-primary btn-md" id="submit">Submit</button>
+				<button type="button" class="btn btn-success btn-md" id="twist">Twist</button>
+				<button type="button" class="btn btn-danger btn-md" data-toggle="modal" data-target="#modalReset">Reset</button>
+				<button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#modalInfo">How to Play</button>	
 			</div>			
 		</form>
 		<div id="twisted"></div>
