Present win message in a modal

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<form autocomplete="off">
 			<input id="guess" type="text" placeholder="Enter text here" autofocus required></input>
 			<div id="buttonRow">
-				<button type="submit" class="btn btn-primary btn-lg" id="submit">Submit</button>
-				<button type="button" class="btn btn-success btn-lg" id="twist">Twist</button>
-				<button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#modalReset">Reset</button>
-				<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modalInfo">How to Play</button>	
+				<button type="submit" class="btn btn-primary" id="submit">Submit</button>
+				<button type="button" class="btn btn-success" id="twist">Twist</button>
+				<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalReset">Reset</button>
+				<button type="button" class="btn btn-info" data-toggle="modal" data-target="#modalInfo">How to Play</button>	
 			</div>			
 		</form>
 		<div id="twisted"></div>
@@ -35,7 +35,7 @@
 	        <h4>Are you sure to reset?</h4>
 	      </div>
 	      <div class="modal-footer">
-	        <button id="reset" type="button" class="btn btn-danger" data-dismiss="modal" default>Reset</button>
+	        <button type="button" class="reset btn btn-danger" data-dismiss="modal" default>Reset</button>
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 	      </div>
 	    </div>
@@ -52,12 +52,36 @@
 	      </div>
 	      <div class="modal-body text-left">
 	        <ul>
-	        	<li>Using keyboard, enter your guesses and press enter.</li>
+	        	<li>Using keyboard, enter your guess and press enter.</li>
 	        	<li>Press <i>Twist</i> button to scramble the order of letters.</li>
 	        	<li>Press <i>Reset</i> button to start another game.</li>
 	        </ul>
 	      </div>
 	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal" default>Close</button>
+	      </div>
+	    </div>
+
+	  </div>
+	</div>
+	<!-- Modal for winning message -->
+	<div id="modalWin" class="modal fade" role="dialog">
+	  <div class="modal-dialog modal-md">
+	    <!-- Modal content-->
+	    <div class="modal-content">
+<!-- 	      <div class="modal-header float-center">
+	        <h2>You Win!</h2>
+	      </div> -->
+	      <div id="winMessage" class="modal-body text-left">
+
+	        <!-- <ul>
+	        	<li>Using keyboard, enter your guess and press enter.</li>
+	        	<li>Press <i>Twist</i> button to scramble the order of letters.</li>
+	        	<li>Press <i>Reset</i> button to start another game.</li>
+	        </ul> -->
+	      </div>
+	      <div class="modal-footer">
+	      	<button type="button" class="reset btn btn-danger" data-dismiss="modal">Play another</button>
 	        <button type="button" class="btn btn-default" data-dismiss="modal" default>Close</button>
 	      </div>
 	    </div>
