Refactor index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<title>Text Twist</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
@@ -39,7 +40,6 @@
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 	      </div>
 	    </div>
-
 	  </div>
 	</div>
 	<!-- Modal for How to Play -->
@@ -61,7 +61,6 @@
 	        <button type="button" class="btn btn-default" data-dismiss="modal" default>Close</button>
 	      </div>
 	    </div>
-
 	  </div>
 	</div>
 	<!-- Modal for winning message -->
@@ -73,7 +72,6 @@
 	        <h2>You Win!</h2>
 	      </div> -->
 	      <div id="winMessage" class="modal-body text-left">
-
 	        <!-- <ul>
 	        	<li>Using keyboard, enter your guess and press enter.</li>
 	        	<li>Press <i>Twist</i> button to scramble the order of letters.</li>
@@ -85,12 +83,10 @@
 	        <button type="button" class="btn btn-default" data-dismiss="modal" default>Close</button>
 	      </div>
 	    </div>
-
 	  </div>
 	</div>
 	<script src="words.json"></script>
 	<!-- <script src="words_reduced.json"></script> -->
 	<script type="text/javascript" src="app.js"></script>
-
 </body>
 </html>
